--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,57 +1,64 @@
 .navBar {
-    width: 100%;
+
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
     flex-direction: row;
-    height:fit-content;
     background-color: #d4c1c1;
-    text-align: right;
+    text-align: right; /* Finally found this. This will align the text to the right of the page*/
     box-shadow: inset 5px 5px 5px #42270066, inset -5px -5px 5px #42270066;
     /*used https://hslpicker.com/ to soften the colour of the shadow (Very cool website)*/
-    justify-content: center;
     border-radius: 15px 0 0 15px;
-    float: right;
+    size: 100%;
+
 }
 
-.button {
-    margin: 0;
-    width: 100%;
+/*display: inline-block;*/
+.mainNav {
+    background-color: #d4c1c1;
+    display: flex;
+    align-items: end;
+    box-shadow: inset 5px 5px 5px #42270066, inset -5px -5px 5px #42270066;
+    /*used https://hslpicker.com/ to soften the colour of the shadow (Very cool website)*/
+    flex-direction: column;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    height: 80px;
+
+    
+}
+
+.navButtons {
     display: flex;
     flex-direction: row;
-    flex-grow: 1;
-    justify-content: center;
+    justify-content: space-between;
+}
+
+
+.button {
     background-color: #fbeee0;
     border: 2px solid #42270066;
     border-radius: 30px;
     box-shadow: #42270066 4px 4px 0 0;
     color: #42270066;
-    font-size: 18px;
-    touch-action: manipulation;
     cursor: pointer;
-}
-
-.navbuttons {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: flex-end;
-    position: relative;
-    justify-content: center;
-    border: none;
-    border-radius: 10px;
-}
-
-.button {
     display: inline-block;
     padding: 4px 18px;
-    margin-top: 20%;
+    margin-top: 1.5%;
+    margin-bottom: 1.5%;
+    margin-right: 2%;
     line-height: 50px;
     text-align: center;
+    text-decoration: none;
+    /* this -select controls the look of the button*/
+    user-select: none;
+    /* this -select that follows specifies whether the text of an element can be selected or not*/
+    -webkit-user-select: none;
+    touch-action: manipulation; 
 }
 
 .button_img {
     position: relative;
     text-decoration: none;
+
 }
 
 .button:hover {
@@ -72,4 +79,23 @@
         min-width: 120px;
         padding: 0 25px;
     }
+}
+
+.button_img {
+    position: relative;
+    text-decoration: none;
+
+}
+
+.button:hover {
+    background-color: #fff;
+
+}
+
+.button:active {
+    box-shadow: #4227009d 2px 2px 0 0;
+    transform: translate(2px, 2px);
+    -webkit-transition: background-color 4s ease-in;
+    /* to support Safari */
+    transition: background-color 4s ease-in;
 }
