--- a/styles/main.css
+++ b/styles/main.css
@@ -96,3 +96,11 @@
     line-height: 1.2;
     color: #422800;
 }
+
+.facePhoto {
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    margin: 10px;
+    margin-top: 30px;
+}
