--- a/styles/main.css
+++ b/styles/main.css
@@ -104,3 +104,9 @@
     margin: 10px;
     margin-top: 30px;
 }
+
+.paragraph {
+    text-decoration: none;
+    font-family: 'Playfair Display';font-size: 22px;
+    text-align: center;
+}
