Busy adding themeSwitch button
I have decided to move to the themeSwitch button to take a break from fixing the navbar. I also added a txt file to try and manage what I still want to do. I got sick and that will definitly help my focus.

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -5,19 +5,23 @@
         /* main layout flip*/
     }
 
+
     /* buttons layout flip*/
+
+    .mainNav {
+        display: flex;
+        flex-direction: column;
+
+    }
     .navButtons {
         flex-direction: row;
         display: flex;
-
-
     }
 
     .buttons {
         margin: 0;
-        width: 100%;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         flex-grow: 1;
         justify-content: center;
         background-color: #fbeee0;
