--- a/styles/themeSwitch.css
+++ b/styles/themeSwitch.css
@@ -1,17 +1,19 @@
 
 .themeSwitch {
     display: flex;
-    
-    height: 40px;
-    width: 40px;
-    padding: 10px;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    height: 30px;
+    width: 30px;
     border-radius: 50%;
 }
 
-.themeSwitch svg {
-    display: flex;
+.themeSwitch i {
     width: 100%;
     height: 100%;
+    vertical-align: middle;
+    line-height: 25px;
 
 }
 
