--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -2,9 +2,9 @@
 
     display: flex;
     flex-direction: row;
-    background-color: #d4c1c1;
+    background-color: var(--mainNav-color);
     text-align: right; /* Finally found this. This will align the text to the right of the page*/
-    box-shadow: inset 5px 5px 5px #42270066, inset -5px -5px 5px #42270066;
+    box-shadow: inset 5px 5px 5px var(--button-shadow), var(--button-shadow);
     /*used https://hslpicker.com/ to soften the colour of the shadow (Very cool website)*/
     border-radius: 15px 0 0 15px;
 
@@ -13,21 +13,23 @@
 
 /*display: inline-block;*/
 .mainNav {
-    background-color: #d4c1c1;
+    background-color: var(--mainNav-color);
     display: flex;
     align-items: end;
-    box-shadow: inset 5px 5px 5px #42270066, inset -5px -5px 5px #42270066;
+    box-shadow: inset 5px 5px 5px var(--bg-shadow), inset -5px -5px 5px var(--bg-shadow);
     /*used https://hslpicker.com/ to soften the colour of the shadow (Very cool website)*/
     flex-direction: column;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
     padding: 5px;
+    position: relative; /* This makes the dark mode toggle button display inside of the navbar */
     /* height: 80px; */
 
     
 }
 
 .navButtons {
+    list-style: none;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -35,11 +37,11 @@
 
 
 .button {
-    background-color: #fbeee0;
-    border: 2px solid #42270066;
+    background-color: var(--button-bg);
+    border: 2px solid var(--button-border);
     border-radius: 30px;
-    box-shadow: #42270066 4px 4px 0 0;
-    color: #42270066;
+    box-shadow: var(--button-shadow) 4px 4px 0 0;
+    color: var(--button-bg);
     cursor: pointer;
     display: inline-block;
     padding: 4px 18px;
@@ -63,23 +65,18 @@
 }
 
 .button:hover {
-    background-color: #fff;
+    background-color: var(--button-hover);
 }
 
 .button:active {
-    box-shadow: #422700bb 2px 2px 0 0;
+    box-shadow: var(--button-shadow) 2px 2px 0 0;
     transform: translate(2px, 2px);
     -webkit-transition: background-color 3s ease-in;
     /* to support Safari */
     transition: background-color 3s ease-in;
 }
 
-/* @media will assist with the compatibility on molibe devices, laptops and tablets */
-@media (min-width: 640px) {
-    .button-74 {
-        padding: 0 25px;
-    }
-}
+
 
 .button_img {
     position: relative;
@@ -87,13 +84,8 @@
 
 }
 
-.button:hover {
-    background-color: #fff;
-
-}
-
 .button:active {
-    box-shadow: #4227009d 2px 2px 0 0;
+    box-shadow: var(--button-shadow) 2px 2px 0 0;
     transform: translate(2px, 2px);
     -webkit-transition: background-color 4s ease-in;
     /* to support Safari */
