--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,28 +1,71 @@
+
+
 @media screen and (max-width: 600px) {
     .main {
         display: flex;
-        flex-direction: ;
+        flex-direction: column;
         /* main layout flip*/
     }
 
+    @media (min-width: 640px) {
+        .button-74 {
+            padding: 0 25px;
+        }
 
-    /* buttons layout flip*/
-
-    .navButtons {
-        display: none !important;
-        flex-direction: column;
+    .dropbtn {
+        list-style: none;
 
     }
-
-    .dropDown {
-        display: block !important;
     }
 
+    /* buttons layout change for mobile*/
+
+
+
+
+}
+
+
+
+/* FULLSCREEN NAV & ITEMS - END */
+
+/* .dropbtn {
+        background-color: #4CAF50;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+      }
+
+
+
+    .dropDown { /* found the !important function which is very usefull 
+        display: inline-block !important;
+        position: relative;
+        background-color: rgb(250, 219, 223);
+        border-radius: 15%;
+        border-top-right-radius: 40%;
+       
+    }
     
-}
+    .dropDown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
 
+    .dropDown-content a:active {background-color: #f1f1f1}
 
-.dropDown {
-    display: none;
+    .dropDown:active .dropDown-content {
+        display: block;
+        
+    }
 
-}
+    .dropDown:active .dropbtn {
+        background-color: #3e8e41;
+      }
+    */
+
+/* @media will assist with the compatibility on molibe devices, laptops and tablets */
