--- a/styles/themeSwitch.css
+++ b/styles/themeSwitch.css
@@ -1,27 +1,106 @@
+ :root[data-theme="pastel"] { /*This :root makes these things match the root of an element in the HTML tree, I am still trying to understand this completely. */
+    --primary-text: #d4a0a0;/*I say text due to the usage of i*/
+    --muted-text: #5f5f5f;/*primary is current active theme button while muted is deavtivated and must be duller*/
+    
+    --bg-color: rgb(255, 253, 231);
+    --body-color: #ffe2e2;
+    --bg-shadow:#42270066;
+    --mainNav-color: #d4c1c1;
+    --mainNav-shadow: #42270066;
+    --pageFont-color: #422800;
+    --button-bg: #fbeee0;
+    --button-border: #42270066;
+    --button-shadow: #42270066;
+    --button-hover: rgba(255, 253, 231, 0.788);
+/*The following DataAtributes are for the slider button*/
+    --switch-bg: #fde6e6;
+    --switch-circle-bg: #d4a0a0;
+    --switch-circle-pos: 2.88rem;
+    --icon-moon: var(--muted-text); 
+    --icon-pastel: rgb(255, 168, 168);
+    --switch-circle-pos: 3.5px;
+
+
+}
+
+:root[data-theme="dark"] { /*This :root makes these things match the root of an element in the HTML tree, I am still trying to understand this completely.*/
+    --primary-text: #d4a0a0;/*I say text due to the usage of i*/
+    --muted-text: #5f5f5f;
+    
+    --switch-bg: #4e4141;
+    --switch-circle-bg: #e6e6e6de;
+    --switch-circle-pos: 0;
+    --icon-moon: rgb(102, 97, 97);
+    --icon-pastel: var(--muted-text);
+    --switch-circle-pos: 26px;
+
+    --bg-color: rgb(71, 71, 71);
+    --body-color: #7c7003;
+    --bg-shadow:#e99b2ec4;
+    --mainNav-color: #8a7d06;
+    --mainNav-shadow:#e99b2ec4;
+    --pageFont-color: #d6b178;
+    --button-bg: rgb(71, 71, 71);
+    --button-border: #b9b9b966;
+    --button-shadow: #e99b2ec4;
+    --button-hover: #635e32; 
+    
+
+}
+
+:root { /*This seperate root applies to everything and not just to an activated theme*/
+    --default-transition: 
+    color 0.6s ease-in-out, 
+    background-color 0.6s ease-in-out, 
+    border-color 0.6s ease-in-out, 
+    fill 0.6s ease-in-out, 
+    ransform 0.6s ease-in-out;
+} /*This is the default transition for all components that change color as the theme changes*/
 
 .themeSwitch {
+
+    background-color: var(--switch-bg);
+    border-radius: 50px;
     display: flex;
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    height: 30px;
-    width: 30px;
+    align-items: center;
+    flex-direction: row;
+    padding: 10px;
+    gap: 10px;
+    cursor: pointer;
+    position: absolute;
+    top: 10px; /*position absolute allows the switch to be placed anywhere on the page using top,right, bottom and left properties*/
+    left: 10px;
+    outline-style: dashed;
+    outline-color: #42280080;
+    transition: var(--default-transition);
+
+}
+
+.themeSwitch::before {
+    content: ''; /*replaces content with a generated value*/
+    position: absolute;
+    height: 27px;
+    width: 27px;
+    background-color: var(--switch-circle-bg);
     border-radius: 50%;
+    z-index: 0; /*This is the z-index of the circle, meaning it is behind the switch*/
+    left: 0;
+    transform: translateX(var(--switch-circle-pos)); /*transform allows animation later with javascript*/
+    transition: var(--default-transition);
 }
 
 .themeSwitch i {
-    width: 100%;
-    height: 100%;
-    vertical-align: middle;
-    line-height: 25px;
+    fill: var(--icon-moon);
+    z-index: 1; /*This is the z-index of the icon, meaning it is in front of the switch, making it visible*/
+    transition: var(--default-transition);
+    
+}
 
+#iconPastel { /*# is for css on an ID in stead of a class!!!!*/
+    color: var(--icon-pastel); /* the var will make the javascript a lot easier to code*/
 }
 
 
-.root {
-
-}
-
-.darkMode {
-
+#iconMoon {
+    color: var(--icon-moon);
 }
