--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -5,13 +5,15 @@
 }
 
 @media screen and (min-width:500px) {
-    .mainNav {  
-        display: none;
-    }
+
 }
 
 @media screen and (max-width: 650px) {
     
+    .mainNav {  
+        display: none !important;
+
+    }
 
     .mainPageInfo {
         display: flex;
