--- a/styles/themeSwitch.css
+++ b/styles/themeSwitch.css
@@ -68,11 +68,12 @@
     gap: 10px;
     cursor: pointer;
     position: absolute;
-    top: 10px; /*position absolute allows the switch to be placed anywhere on the page using top,right, bottom and left properties*/
-    left: 10px;
+    top: 30px; /*position absolute allows the switch to be placed anywhere on the page using top,right, bottom and left properties*/
+    left: 30px;
     outline-style: dashed;
     outline-color: #42280080;
     transition: var(--default-transition);
+    z-index: 2;
 
 }
 
