Responsive and styles
Responsive dropdown added, improved styles.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 .mainPageBody {
-    padding: 10px;
+    padding: 10%;
     list-style: none;
 
 }
@@ -30,7 +30,7 @@
 }
 
 .padding {
-    padding: 15px;
+    padding: 4%;
 }
 
 .bodyCntr {
