--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,105 +1,72 @@
-    /* buttons layout change for mobile*/
-.dropDown { /*This dropdown must not display untill the screen is viewed on smaller then 600px*/
-    display: flex;
+/* buttons layout change for mobile*/
+.dropDown {
+    /*This dropdown must not display untill the screen is viewed on smaller then 500px*/
     display: none;
 }
 
-@media screen and (min-width:500px) {
+@media screen and (max-width: 680px) {
 
-}
-
-@media screen and (max-width: 650px) {
-    
-    .mainNav {  
-        display: none !important;
+    .mainNav {
+        height: 80px;
 
     }
 
     .mainPageInfo {
         display: flex;
-        
-    }
-
-    .button {
-        display: flex;
-
 
     }
+
+    .themeSwitch {
+        position: absolute;
+        top: 25%;
+        left: 5%;
+        transition: 3s;
+    }
+
     .navButtons {
         width: 100%;
-        display: none;
+        display: none !important;
     }
 
+    /* Show dropdown when screen is small */
     .dropDown {
-        display: flex;
-        display: none;
-    }
-
-    .dropDown--units a {
-        text-decoration: none;
-    }
-
-    /* .dropDown-content {
-        display:flex;
+        display: contents;
         
     }
-
-
-
-    .dropDown {
-    
-    }
-    
-    .dropDown--units {
-        text-decoration: none;
-    } */
-    
-
-
 
 }
 
+/*Only buttons need to be in media queries*/
+.dropDown-content {
+    display: none;
+}
 
+.dropDown-content-active {
+    display: flex!important;
+    flex-direction: column;
+    justify-content: center;
+    position: fixed;
+    top:0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--body-color);
+    z-index: 3;
+}
 
-/* FULLSCREEN NAV & ITEMS - END */
+.dropDown--item {
+    padding: 10px;
+    color: var(--primary-text);
+    font-size: large;
+}
 
-/* .dropbtn {
-        background-color: #4CAF50;
-        color: white;
-        padding: 16px;
-        font-size: 16px;
-        border: none;
-        cursor: pointer;
-      }
+.dropbtn {
+    padding-top: 2.5px;
 
+}
 
-
-    .dropDown { /* found the !important function which is very usefull 
-        display: inline-block !important;
-        position: relative;
-        background-color: rgb(250, 219, 223);
-        border-radius: 15%;
-        border-top-right-radius: 40%;
-       
-    }
-    
-    .dropDown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-    }
-
-    .dropDown-content a:active {background-color: #f1f1f1}
-
-    .dropDown:active .dropDown-content {
-        display: block;
-        
-    }
-
-    .dropDown:active .dropbtn {
-        background-color: #3e8e41;
-      }
-    */
-
-/* @media will assist with the compatibility on molibe devices, laptops and tablets */
+.dropclosebtn {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+}
