Added Contact Form
Minimal styling needed for the form inputs.

Linked a new font.

Updated the fix.txt.

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,4 +1,19 @@
-.button--active {
-    position: relative;
-    
-  }
+.contactForm {
+  display: flex;
+  flex-direction: column;
+}
+
+.contactForm input {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.contactForm button {
+  border: none;
+  background-color: var(--button-bg);
+  transition-duration: 300;
+
+}
+.contactForm button:hover {
+  background-color: var(--button-hover);
+}
