--- a/styles/themeSwitch.css
+++ b/styles/themeSwitch.css
@@ -9,6 +9,7 @@
      --body-color: #ffe2e2;
      --bg-shadow: #42270066;
      --mainNav-color: #d4c1c1;
+     --about-text-cont-bg: #d4c1c1b2;
      --mainNav-shadow: #42270066;
      --pageFont-color: #422800;
      --button-bg: #fbeee0;
