--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -73,7 +73,7 @@
     padding-top: 2.5px;
 }
 
-.dropclosebtn {
+.dropclosebtn { /*this is a small cross button I used for the dropdown page for an exit option*/
     position: fixed;
     top: 10px;
     right: 10px;
